<resources>
    <string name="app_name">SnsShareDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title">社交分享Demo</string>
    <string name="btn_share">点击分享</string>

    <string name="tip_empty_image">请先选择要分享的图片</string>

    <string name="share_success">分享成功</string>
    <string name="share_error">分享失败</string>
    <string name="share_cancel">取消分享</string>

    <string name="label_wechat_friend">微信好友</string>
    <string name="label_wechat_timeline">微信朋友圈</string>
    <string name="label_tencent_qq">QQ</string>
    <string name="label_sina_weibo">新浪微博</string>

    <string name="cancel">取消</string>
</resources>
