<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="27dp"
            android:paddingRight="27dp">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/iv_wechat_friend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/share_wechat_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_wechat_friend"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/iv_wechat_timeline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/share_wxtimeline_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_wechat_timeline"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/iv_tencent_qq"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/share_qzone_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_tencent_qq"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <ImageButton
                    android:id="@+id/iv_sina_weibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/share_weibo_bg" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_sina_weibo"
                    android:textSize="12sp"
                    android:textColor="#000000"
                    android:layout_marginTop="5dp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/cancel"
            android:textSize="15sp"
            android:textColor="#000000"
            android:background="#00FFFFFF"
            android:layout_marginTop="10dp" />
    </LinearLayout>

</RelativeLayout>